# ProjectTemplate

./: CMakeLists.txt  README.md  manifest.xml
Resource/: RCa08384  resource.h  resource.rc
src/: Common.hpp  main.cpp
